# pyspark-etl

./: .gitignore  Makefile  README.md  pyproject.toml
src/: main.py
tests/: test_etl.py
